# nrf51_playground

./: .gitignore  CMakeLists.txt  LICENSE  arm-none-eabi.cmake
components/toolchain/gcc/: nrf51_xxaa_sd.ld  nrf51_xxac_sd.ld
config/: app_config.h
include/: custom_board.h
scripts/: merge_hex.sh
src/: main.c
